--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>Map your workouts</title>
   </head>
   <body>
     <div class="sidebar">
