--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="form__row">
             <label class="form__label">Distance</label>
-            <input class="form__input form__input--distance" placeholder="km" />
+            <input class="form__input form__input--distance" placeholder="mi" />
           </div>
           <div class="form__row">
             <label class="form__label">Duration</label>
@@ -62,7 +62,7 @@
             <label class="form__label">Elev Gain</label>
             <input
               class="form__input form__input--elevation"
-              placeholder="meters"
+              placeholder="feet"
             />
           </div>
           <button class="form__btn">OK</button>
@@ -73,7 +73,7 @@
           <div class="workout__details">
             <span class="workout__icon">🏃‍♂️</span>
             <span class="workout__value">5.2</span>
-            <span class="workout__unit">km</span>
+            <span class="workout__unit">mi</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⏱</span>
@@ -83,7 +83,7 @@
           <div class="workout__details">
             <span class="workout__icon">⚡️</span>
             <span class="workout__value">4.6</span>
-            <span class="workout__unit">min/km</span>
+            <span class="workout__unit">min/mi</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">🦶🏼</span>
@@ -97,7 +97,7 @@
           <div class="workout__details">
             <span class="workout__icon">🚴‍♀️</span>
             <span class="workout__value">27</span>
-            <span class="workout__unit">km</span>
+            <span class="workout__unit">mi</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⏱</span>
@@ -107,12 +107,12 @@
           <div class="workout__details">
             <span class="workout__icon">⚡️</span>
             <span class="workout__value">16</span>
-            <span class="workout__unit">km/h</span>
+            <span class="workout__unit">mph</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⛰</span>
             <span class="workout__value">223</span>
-            <span class="workout__unit">m</span>
+            <span class="workout__unit">ft</span>
           </div>
         </li>-->
       </ul>
